# msg_app_stuff

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.txt  docker-compose.yml  graph.html  poetry.toml  pyproject.toml  pyrightconfig.json
migrations/: V1__chat_core.sql  V1__init.sql  V2__read_state_reactions_attatchments.sql
seed/: dev_seed.sql
server/: db.py  main.py  models.py  security.py  server.py
src/: main.cpp
