[project]
name = "msg-app-api"
version = "0.1.0"
description = "server"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "sqlalchemy (>=2.0.36)",
    "asyncpg (>=0.29.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "typing-extensions (>=4.12.2)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
